Version Next

    - Fixed bug where \t separator was being skipped as whitespace

Version 1.3.2 released January 25, 2023

    - Fixed bug where we could emit empty XML tag names
    - Fixed bug in man page examples for "-b" flag

Version 1.3.1 released December 14, 2021

    - Added "-c" flag for explicit column names
    - Added "-n" flag that only reads column names
    - Added "-p" flag for prefixing names
    - Omit special variable names in Bash mode
    - Fixed build error on systems without 'u_char' defined

Version 1.3.0 released December 9, 2021

    - Added "-b" flag for new Bash output mode

Version 1.2.1 released November 24, 2021

    - Fixed bug where "-x" flag was behaving like "-X"

Version 1.2.0 released November 22, 2021

    - Added "-j" flag for JSON text sequence document output.
    - Stopped escaping double quote as "&quot;" in plain XML text.

Version 1.1.0 released February 25, 2021

    - Added support for format strings containing column names

Version 1.0.4 released August 1, 2018

    - Fixed "unexpected character" bug when line ends with QUOTE, CR
    - Added "-X" flag to derive XML tag names from column headers

Version 1.0.3 (r32) released January 5, 2013

    - Add support for converting XML back to CSV
    - Add `-e' flag to set input character encoding
    - Escape CR characters in XML output
    - Fixed glitches in man page

Version 1.0.2 (r25) released August 25, 2012

    - Allow backslash escapes for `-s' and `-q' flags
    - Accept files that lack a terminating newline
    - Accept CR, LF, or CR-LF line endings

Version 1.0.1 (r17) released March 9, 2012

    - Fix bug where `-s' flag did not function (Issue #1)
    - Document '%0$' specifier in man page

Version 1.0 (r4) released November 30, 2010

    - Initial release
